Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60985

QQuickWidget is partially rendered when other window is moving on top of it

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.1
    • 5.8.0, 5.9.0 Beta 4
    • Quick: 2D Renderer
    • None

      Steps to reproduce:

      1) compile the example quickwidget with QT_QUICK_BACKEND set to "softwarecontext" 

      2) run it and move or resize the window with digits on top of the window containing rotating square.

      2drenderer.mp4

        1. 2drenderer.mp4
          406 kB
          Konstantin Vorobyov
        For Gerrit Dashboard: QTBUG-60985
        # Subject Branch Project Status CR V

            janichol Andy Nichols
            kvorobyov Konstantin Vorobyov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes